# math-tavern-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  autosully-up.sh  autosullyworker.Dockerfile  docker-compose-bot.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-ci.yml
.run/: main.run.xml
python/: main.py  sully_cli.py  sully_worker.py
python/bookbot/: booklist.py  bot.py  models.py
python/derpz_botlib/: README.md  __init__.py  bot_classes.py  cog.py  embed_utils.py  paginator.py  utils.py
python/derpz_botlib/database/: db.py  storage.py  tables.py
python/derpz_botlib/discord_utils/: paginator.py  view.py
python/math_tavern_bot/: __init__.py  bot.py  bot_classes.py  plugin_autosully.py  plugin_config.py  plugin_pin.py  plugins_bot_admin.py  utils.py
python/math_tavern_bot/book_search/: __init__.py  models.py  plugin.py
python/math_tavern_bot/booklist/: __init__.py  booklist.py  models.py  plugin.py  upload.py
python/math_tavern_bot/config/: kv_store.py  models.py  plugin.py
python/math_tavern_bot/database/: __init__.py  storage.py
python/math_tavern_bot/plugins/: plugin_autosully.py  plugin_book_search.py  plugin_bot_admin.py  plugin_tierlist.py
python/math_tavern_bot/plugins/booklist/: models.py  plugin.py  search.py  upload.py  upload_views.py  utils.py
python/math_tavern_bot/tierlist/: __init__.py  models.py  plugin.py  tierlist.py
python/math_tavern_bot_py/: bot.py
python/math_tavern_bot_py/plugins/: plugin_auto_purge.py  plugin_autosully.py  plugin_book_search.py  plugin_bot_admin.py  plugin_goal_setting.py  plugin_google_books_search.py  plugin_help_forum.py  plugin_libgen_search.py  plugin_moderation.py  plugin_pin.py  plugin_poll.py  plugin_remind_me.py  plugin_sticky_roles.py  plugin_tierlist.py
python/math_tavern_bot_py/plugins/booklist/: models.py  plugin.py  upload.py  upload_manager.py  upload_views.py
python/tests/: test_parse_human_time.py
scripts/: check-and-lint.sh  deploy.sh  down.sh  format.sh  up.sh
src/: lib.rs
