[package]
name = "math-tavern-bot"
version = "0.1.0"
edition = "2021"
license = "GNU-Affero-3.0-or-later"
authors = ["derpz-discord <derpz@sotruespace.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "math_tavern_bot_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
lopdf = "0.29.0"
pdf = "0.8.0"
pyo3-asyncio = { version = "0.18.0", features = ["tokio"] }
reqwest = { version = "0.11.15", features = ["rustls", "blocking"] }
tokio = { version = "1.26.0", features = ["tokio-macros"] }
