[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.poetry]
name = "bookbot"
version = "0.1.0"
description = "A bot for managing a book club"
authors = ["derpz-discord"]

[tool.poetry.dependencies]
python = ">=3.8"
py-cord = "^2.4.0"

[tool.poetry.dev-dependencies]
maturin = "^0.14.13"

[project]
name = "bookbot"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


