[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.poetry]
name = "math-tavern-bot"
version = "0.1.0"
description = "A bot for managing a book club"
authors = ["derpz-discord"]

[tool.poetry.dependencies]
python = ">=3.8"
python-dotenv = "^0.21.1"
rich = "^13.3.1"
disnake = "^2.8.1"
sentry-sdk = "^1.17.0"
sqlalchemy = "^2.0.7"
pydantic = "^1.10.6"

[tool.poetry.dev-dependencies]
maturin = "^0.14.13"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"

[tool.mypy]
plugins = "disnake.ext.mypy_plugin"


[project]
name = "math-tavern-bot"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


