[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.poetry]
name = "math-tavern-bot"
version = "1.3.1"
description = "A bot for managing a book club"
authors = ["derpz-discord <derpz@sotruespace.uk>"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
python-dotenv = "^0.21.1"
rich = "^13.3.1"
disnake = "^2.8.1"
sentry-sdk = "^1.17.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
pydantic = "^1.10.6"
requests = "^2.28.2"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
aiodns = "^3.0.0"
aiosqlite = "^0.18.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.8"}
aioredis = "^2.0.1"
redis = "^4.5.3"
libgen-api = "^1.0.0"

[tool.poetry.group.dev.dependencies]
maturin = "^0.14.13"
black = "^23.1.0"
mypy = "^1.1.1"
datamodel-code-generator = "^0.17.1"
isort = "^5.12.0"
ipython = "^8.11.0"
pytest = "^7.2.2"

[tool.mypy]
plugins = "disnake.ext.mypy_plugin"


[project]
name = "math-tavern-bot"
version = "1.3.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


